<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/iv_main_review_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/review_card"
        android:clipToOutline="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/iv_main_review"
            android:layout_width="302dp"
            android:layout_height="480dp"
            android:alpha="0.6"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/game_cover_ghost_recon" />

        <TextView
            android:id="@+id/tv_main_review_name"
            style="@style/body_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:text="@string/dmy_0"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_main_review_title"
            style="@style/headline_b"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginBottom="128dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:text="@string/dmy_1"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_main_review_review"
            style="@style/caption"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginBottom="64dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingHorizontal="16dp"
            android:text="@string/dmy_2"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_main_review_hash"
            style="@style/caption"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingHorizontal="16dp"
            android:text="@string/dmy_3"
            android:textColor="@color/white" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>