<?xml version="1.0" encoding="UTF-8" ?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_d_background"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintHeight_percent="0.5"
    app:showPaths="false"
    app:layoutDescription="@xml/scene_header"
    app:layout_constraintTop_toTopOf="parent"
    tools:showIn="@layout/activity_detail"
    >

    <ImageView
        android:id="@+id/iv_d_background_game_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.5"
        android:background="@drawable/radius_background"
        android:clipToOutline="true"
        android:src="@drawable/game_cover_supper_bunny_man"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"/>

    <ImageView
        android:id="@+id/iv_d_blackfilter_game_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/radius_background"
        android:clipToOutline="true"
        android:src="#222222"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/iv_icon_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_back"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/tv_d_recommend_game"
        style="@style/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/recommend_game_name"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_d_user_recommend_game"
        style="@style/subtitle_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_recommend_game_name"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/tv_d_recommend_game"
        app:layout_constraintTop_toBottomOf="@id/tv_d_recommend_game" />

    <TextView
        android:id="@+id/tv_d_hashtag"
        style="@style/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hashtag"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/tv_d_recommend_game"
        app:layout_constraintTop_toBottomOf="@id/tv_d_user_recommend_game" />

    <TextView
        android:id="@+id/tv_d_user_hashtag"
        style="@style/subtitle_b"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_hashtag"
        android:gravity="right"
        android:maxLines="3"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/tv_d_recommend_game"
        app:layout_constraintTop_toBottomOf="@id/tv_d_hashtag" />

    <TextView
        android:id="@+id/tv_d_price"
        style="@style/headline_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/price"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/tv_d_recommend_game"
        app:layout_constraintTop_toBottomOf="@id/tv_d_user_hashtag"/>

</androidx.constraintlayout.motion.widget.MotionLayout>
